# Task-6-Report-of-Monaco-2018-Racing

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
data/: abbreviations.txt
src/: __init__.py  convert_time.py  main.py  make_report.py  parsing.py  report.py
tests/: __init__.py  all_test.py
