[metadata]
name = Report of Monaco 2018 Racing
version = 1.0.1
author = Safonov Volodymyr
author_email = vladimir_safonov@ukr.net
description = Application takes a string and returns the number of unique characters in the string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/Thrifty/task-6-report-of-monaco-2018-racing/
project_urls =
    https://git.foxminded.com.ua/Thrifty/task-6-report-of-monaco-2018-racing/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
