[metadata]
name = Report of Monaco 2018 Racing
version = 1.0.2
author = Safonov Volodymyr
author_email = vladimir_safonov@ukr.net
description = Application print report that shows the top 15 racers and the rest after underline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/Thrifty/task-6-report-of-monaco-2018-racing/
project_urls =
    Bug Tracker = https://git.foxminded.com.ua/Thrifty/task-6-report-of-monaco-2018-racing/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
